--- a/docs/slides/css/theme/solarized.css
+++ b/docs/slides/css/theme/solarized.css
@@ -23,6 +23,11 @@ mark.highlight {
     background: none;
 }
 
+text.code {
+  font-family: Courier New, Courier, monospace ;
+}
+
+
 .reveal {
   font-family: "Lato", sans-serif;
   font-size: 40px;
@@ -199,6 +204,7 @@ mark.highlight {
 .reveal table tbody tr:last-child th,
 .reveal table tbody tr:last-child td {
   border-bottom: none; }
+
 
 .reveal sup {
   vertical-align: super; }
