--- a/docs/slides/css/theme/unibas.css
+++ b/docs/slides/css/theme/unibas.css
@@ -111,6 +111,22 @@ text.code {
     box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.2); 
   }
 
+  .reveal .slides div.framebox {
+    display: inline-block;
+    vertical-align: left;
+    margin: auto;
+    margin: 20px auto;
+    padding: 5px;
+  
+    /*background: rgb(165, 215, 210);*/
+    /*background-color: rgb(165, 215, 210);*/
+    border-width: 1pt;
+    border-style:solid;
+    border-color: rgb(30, 165, 165);
+    box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.2); 
+  }
+
+
 
 /* Ensure certain elements are never larger than the slide itself */
 .reveal img,
