--- a/docs/slides/css/theme/unibas.css
+++ b/docs/slides/css/theme/unibas.css
@@ -249,6 +249,11 @@ text.code {
 .reveal table tbody tr:last-child td {
   border-bottom: none; }
 
+  .reveal table tbody tr.highlight {
+    background-color: rgb(165, 215, 210);
+  }
+  
+
 
 .reveal sup {
   vertical-align: super; }
@@ -350,6 +355,7 @@ text.code {
   -moz-transition: width 800ms cubic-bezier(0.26, 0.86, 0.44, 0.985);
   transition: width 800ms cubic-bezier(0.26, 0.86, 0.44, 0.985); }
 
+
   /***************************************
   * Title page
   ****************************************/
@@ -364,6 +370,7 @@ text.code {
     background-color: rgb(165, 215, 210);
     box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.2); 
   }
+
 
 
   
