added forkme banner

--- a/docs/assets/css/style.scss
+++ b/docs/assets/css/style.scss
@@ -2,5 +2,5 @@
 ---
 @import "{{ site.theme }}";
 #footer_wrap {display: none;}
-#forkme_banner {display: none;}
+forkme_banner {display: none;}
 #downloads {display: none;}
