Remove Link Underline for Headers

--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -14,7 +14,7 @@
   <body>
 
     <!-- HEADER -->
-    <a href="http://127.0.0.1:4000">
+    <a href="http://127.0.0.1:4000" style="text-decoration: none;">
         <div id="header_wrap" class="outer">
             <header class="inner">
             {% if site.github.is_project_page %}
