--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -14,7 +14,7 @@
   <body>
 
     <!-- HEADER -->
-    <a href="http://127.0.0.1:4000" id="home_link">
+    <a href="https://rahelv.github.io/software-engineering/" id="home_link">
         <div id="header_wrap" class="outer">
             <header class="inner">
             {% if site.github.is_project_page %}
