--- a/docs/assets/css/style.scss
+++ b/docs/assets/css/style.scss
@@ -4,9 +4,8 @@
 #footer_wrap {display: none;}
 forkme_banner {display: none;}
 #downloads {display: none;}
-home_link {
-    a:link { text-decoration: none; }
-    a:visited { text-decoration: none; }
-    a:hover { text-decoration: none; }
-    a:active { text-decoration: none; }
-}
+
+#home_link { text-decoration: none; }
+#home_link:visited { text-decoration: none; }
+#home_link:hover { text-decoration: none; }
+#home_link:active { text-decoration: none; }
